Fixed bug
Bug that caused name on banner to exceed width of web page, enabling
horizontal scrolling when width<=400px.

--- a/styles/generic.css
+++ b/styles/generic.css
@@ -169,7 +169,7 @@ body {
 
 @media screen and (max-width:400px){
     #headshot, #logo {
-        width: 100%;
+        width: 95%;
         display: block;
         margin-left: auto;
         margin-right: auto;
